Fix:Jumbotron was not responsive at lower screens. it was overflowing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@ body {
 
 /* Jumbotron */
 .jumbotron {
-    margin: 0;
+    margin: 20px;
     animation: zoom-in 3s forwards;
 }
 
